<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/wel_come_to_our_coffe_shop"
            android:textAlignment="center"
            android:textSize="20sp"
            android:background="@drawable/ic_background"
            android:fontFamily="casual"
            android:textStyle="bold"
            android:textAllCaps="true"
            android:textColor="#0C0C0C"
            android:gravity="center_horizontal" />

        <EditText
            android:id="@+id/idEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_your_name"
            android:minHeight="48dp"
            android:layout_marginTop="10dp"
            android:padding="10dp"
            android:maxLines="1"
            android:textColor="@color/black"
            android:textSize="14sp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/choose_your_coffe"
            android:textSize="14sp"
            android:textColor="@color/black"
            android:textAlignment="center"
            android:padding="10dp"
            android:layout_margin="10dp"
            android:gravity="center_horizontal"/>
        <LinearLayout
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FBE205"
            android:orientation="horizontal">
            <CheckBox
                android:id="@+id/idCheckBoxOne"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/regular"
                android:layout_marginStart="10dp"
                android:padding="10dp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:layout_marginLeft="10dp" />

            <CheckBox
                android:id="@+id/idCheckBoxTwo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="90dp"
                android:layout_marginLeft="90dp"
                android:padding="10dp"
                android:text="@string/black"
                android:textColor="@color/black"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/quantity"
                android:textStyle="bold"
                android:padding="8dp"
                android:textSize="16sp"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp" />

            <Button
                android:id="@+id/idPluseButton"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_margin="10dp"
                android:backgroundTint="@color/teal_700"
                android:onClick="increment"
                android:text="+"
                android:textSize="16sp"
                tools:ignore="TouchTargetSizeCheck" />


            <Button
                android:id="@+id/idMinusButton"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="10dp"
                android:backgroundTint="#FB1504"
                android:onClick="decrement"
                android:text="-"
                android:textSize="16sp"
                tools:ignore="TouchTargetSizeCheck" />

            <TextView
                android:id="@+id/idQuantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="10dp"
                android:inputType="number"
                android:padding="8dp"
                android:text="@string/_0"
                android:textSize="16sp"
                android:textStyle="bold"
                tools:ignore="TextViewEdits,TouchTargetSizeCheck" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="#FAE107"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_margin="10dp"
                android:layout_height="match_parent"
                android:orientation="horizontal">
                <CheckBox
                    android:id="@+id/idCheckBoxCream"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cream"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:padding="10dp"/>

                <CheckBox
                    android:id="@+id/idCheckBoxChocolate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="80dp"
                    android:layout_marginLeft="80dp"
                    android:padding="10dp"
                    android:text="@string/chocolate"
                    android:textSize="14sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/idOrderButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:onClick="submitOrder"
            android:padding="5dp"
            android:text="@string/order"
            android:background="@drawable/ic_background"
            android:textAllCaps="true"
            tools:ignore="UsingOnClickInXml" />

        <TextView
            android:id="@+id/idDisplayOrderDetail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/order_summary"
            android:padding="10dp"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="10dp"
            android:textSize="24sp"
            android:textColor="@color/black"
            android:background="@drawable/ic_background"
            android:textStyle="bold" />
    </LinearLayout>
</ScrollView>